@@ -1,5 +1,6 @@
 package ru.yandex.practicum.filmorate.service;
 
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
@@ -9,14 +10,18 @@ import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class FilmService {
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
-    private static final LocalDate EARLIEST_RELEASE_DATE = LocalDate.of(1895, 12, 28);
+    private final Map<Integer, Set<Integer>> likes = new HashMap<>();
 
-    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
+    public FilmService(
+            @Qualifier("filmDbStorage") FilmStorage filmStorage,
+            @Qualifier("userDbStorage") UserStorage userStorage
+    ) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
     }
@@ -43,36 +48,43 @@ public class FilmService {
     }
 
     public void addLike(int filmId, int userId) {
-        Film film = getById(filmId);
+        getById(filmId);
         userStorage.getById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id=" + userId + " не найден"));
-
-        film.getLikes().add(userId);
+        likes.computeIfAbsent(filmId, k -> new HashSet<>()).add(userId);
     }
 
     public void removeLike(int filmId, int userId) {
-        Film film = getById(filmId);
+        getById(filmId);
         userStorage.getById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id=" + userId + " не найден"));
-
-        film.getLikes().remove(userId);
+        Set<Integer> filmLikes = likes.get(filmId);
+        if (filmLikes != null) {
+            filmLikes.remove(userId);
+        }
     }
 
     public List<Film> getPopular(int count) {
         return filmStorage.getAll().stream()
-                .sorted(Comparator.comparingInt((Film f) -> f.getLikes().size()).reversed())
+                .sorted((f1, f2) -> Integer.compare(
+                        likes.getOrDefault(f2.getId(), Collections.emptySet()).size(),
+                        likes.getOrDefault(f1.getId(), Collections.emptySet()).size()))
                 .limit(count)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private void validate(Film film) {
-        if (film.getName() == null || film.getName().isBlank())
+        if (film.getName() == null || film.getName().isBlank()) {
             throw new ValidationException("Название фильма не может быть пустым");
-        if (film.getDescription() != null && film.getDescription().length() > 200)
+        }
+        if (film.getDescription() != null && film.getDescription().length() > 200) {
             throw new ValidationException("Описание не может превышать 200 символов");
-        if (film.getReleaseDate() != null && film.getReleaseDate().isBefore(EARLIEST_RELEASE_DATE))
-            throw new ValidationException("Дата релиза не может быть раньше 28.12.1895");
-        if (film.getDuration() <= 0)
+        }
+        if (film.getReleaseDate() != null && film.getReleaseDate().isBefore(LocalDate.of(1895, 12, 28))) {
+            throw new ValidationException("Дата релиза не может быть раньше 28 декабря 1895 года");
+        }
+        if (film.getDuration() <= 0) {
             throw new ValidationException("Продолжительность фильма должна быть положительной");
+        }
     }
 }
